<resources>
    <string name="app_name">TextInputLayout and SnackBar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Your Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
</resources>
